# gst-plugin-vpe

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  gstvpe.c  gstvpe.h  gstvpebins.c  gstvpebins.h  gstvpebuffer.c  gstvpebufferpool.c
tests/perf/: Makefile.am  gstperf.c  gstperf.h
tests/vpetest/: Makefile.am  gstvpetest.c
tools/: parse-gst-traces.py  playback.py
